Adjustments to fix the stretchy toolbar buttons.

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -260,12 +260,13 @@ ul > hr {
 /* Editor toolbar New, Open, and Save buttons */
 .bpIcon {
   margin: 2px;
-  padding: 6px 0;
+  padding: 5px 0;
   box-sizing: border-box;
 }
 
 .btn-circle {
   text-align: center;
+  margin: 0 3px;
 
   &:hover {
     box-shadow: 2px 2px 5px #89a;
